storage/innobase/fts/fts0fts.cc
@@ -1373,7 +1373,7 @@ fts_cache_add_doc(
 static dberr_t fts_drop_table(trx_t *trx, const char *table_name, bool rename)
 {
   if (dict_table_t *table= dict_table_open_on_name(table_name, true,
-                                                   DICT_ERR_IGNORE_DROP))
+                                                   DICT_ERR_IGNORE_TABLESPACE))
   {
     table->release();
     if (rename)
@@ -1505,7 +1505,7 @@ static dberr_t fts_lock_table(trx_t *trx, const char *table_name)
   ut_ad(purge_sys.must_wait_FTS());
 
   if (dict_table_t *table= dict_table_open_on_name(table_name, false,
-                                                   DICT_ERR_IGNORE_DROP))
+                                                   DICT_ERR_IGNORE_TABLESPACE))
   {
     dberr_t err= lock_table_for_trx(table, trx, LOCK_X);
     /* Wait for purge threads to stop using the table. */
